fixed scrollbar bounce

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
   text-align: center;
 }
+
+.scroll-bar-fix {
+  padding-left: calc(100vw - 100%);
+}
