--- a/src/pages/EmojiApp/EmojiApp.css
+++ b/src/pages/EmojiApp/EmojiApp.css
@@ -3,7 +3,3 @@
   margin: 0 auto;
   text-align: center;
 }
-
-html {
-  /* overflow: scroll; */
-}
